try fixing play button edges on iOS

--- a/assets/css/skydrift.css
+++ b/assets/css/skydrift.css
@@ -86,13 +86,14 @@ div.footer {
   margin-top: -50px;
   position: absolute;
   opacity: .75;
-
-  -webkit-filter: drop-shadow(0 1px 2px rgba(0,0,0,.95));
+  /*image-rendering:-webkit-optimize-contrast;*/
+  
+/*  -webkit-filter: drop-shadow(0 1px 2px rgba(0,0,0,.95));
   -moz-filter: drop-shadow(0 1px 2px rgba(0,0,0,.95));
   -ms-filter: drop-shadow(0 1px 2px rgba(0,0,0,.95));
   -o-filter: drop-shadow(0 1px 2px rgba(0,0,0,.95));
   filter: drop-shadow(0 1px 2px rgba(0,0,0,.95));
-
+*/
 }
 
 @media (max-width: 767px) {
